# slab

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: notes.txt
examples/: CMakeLists.txt  example1.cpp
include/slab/: camera.hpp  context.h  context.hpp  foundation.h  geometry.hpp  matrix.hpp  mesh.h  mesh.hpp  object.hpp  scene.h  scene.hpp  triangle.hpp  window.h  window.hpp
modules/: FindGLFW.cmake
src/: CMakeLists.txt  camera.cpp  context.cpp  foundation.cpp  geometry.cpp  matrix.cpp  mesh.cpp  object.cpp  scene.cpp  triangle.cpp  window.cpp
